<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/subject_nametxtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subject_daytxtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/day"
        app:layout_constraintStart_toEndOf="@+id/subject_nametxtview"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subject_blocktxtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/block"
        app:layout_constraintStart_toEndOf="@+id/subject_daytxtview"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/in"
        app:layout_constraintStart_toEndOf="@+id/subject_blocktxtview"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_assign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/assign"
        app:layout_constraintStart_toEndOf="@+id/button_in"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>